--- a/src/assets/styles/cmps/Trips.scss
+++ b/src/assets/styles/cmps/Trips.scss
@@ -3,20 +3,60 @@
     .trips-preview {
         display: grid;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(2, 2fr) 1.6fr;
+        grid-template-rows: repeat(3, 1fr) 1.6fr;
         grid-column-gap: 20px;
         grid-row-gap: 10px;
         margin-block-end: 10px;
+        font-family: Airbnb_Cereal-Bold;
+        font-size: 1.35rem;
 
-        .mini-card.next-stay {
-            grid-column: 1;
-            grid-row: 1;
-            // flex-wrap: nowrap;
-            // justify-content: space-between;
+        img {
+            border-radius: 10px;
+        }
+
+        .mini-card {
+            border: 1px solid #DDDDDD;
+            color: #222;
+            border-radius: 12px;
+            padding: 18px;
+            margin-block-start: 20px;
+
+            &.next-stay {
+                grid-column: 1 / 5;
+                grid-row: 1/3;
+                justify-content: space-between;
+            }
+
+            &.wishlist {
+                grid-column: 5/7;
+                grid-row: 1/2;
+                width: 100%;
+            }
+
+            &.message {
+                grid-column: 5/7;
+                grid-row: 2/3;
+                width: 100%;
+            }
+
         }
 
         .prev-stays {
-            grid-row: 2;
+            grid-column: 1 / end;
+            grid-row: 3;
+            padding: 18px;
+            margin-block-start: 20px;
+
+            .stay-in-prev-stays {
+                margin-inline-end: 5em;
+                
+                img {
+                    margin-inline-end: 1em;
+                    object-fit: cover;
+                    height: 72px;
+                    width: 72px;
+                }
+            }
         }
     }
 }
