--- a/src/assets/styles/cmps/DetailsOrderBox.scss
+++ b/src/assets/styles/cmps/DetailsOrderBox.scss
@@ -49,6 +49,9 @@
 .date-picker {
   display: flex;
   justify-content: space-between;
+  label {
+    color: black;
+  }
 }
 
 .date-input {
@@ -69,7 +72,7 @@
   flex-direction: column;
   gap: 5px;
   border-top: 1px solid #00000050;
-  padding: 13px 12px;
+  padding: 7px 12px;
   color: gray;
   font-size: 0.75rem;
 
@@ -195,3 +198,6 @@ p.footer {
   width: 100%;
   text-align: center;
 }
+// .order-container hr {
+//   color: aliceblue;
+// }
