--- a/src/assets/styles/cmps/Trips.scss
+++ b/src/assets/styles/cmps/Trips.scss
@@ -1,80 +1,85 @@
 .trips {
 
     .trips-preview {
-            display: flex;
-            flex-direction: column;
-            margin-block-end: 10px;
-            font-size: 1rem;
-            margin-block-start: 70px;
+        display: flex;
+        flex-direction: column;
+        margin-block-end: 10px;
+        font-size: 1rem;
+        margin-block-start: 70px;
 
-            .mini-card {
-                border: 1px solid #DDDDDD;
-                color: $clr8;
-                border-radius: 12px;
-                padding: 18px;
-                margin-block-start: 10px;
+        .mini-card {
+            border: 1px solid #DDDDDD;
+            color: $clr8;
+            border-radius: 12px;
+            padding: 18px;
+            margin-block-start: 10px;
 
-                &.next-stay,
-                &.prev-stay {
-                    display: flex;
-                    flex-direction: column;
-                    font-size: 1rem;
+            &.next-stay,
+            &.prev-stay {
+                display: flex;
+                flex-direction: column;
+                font-size: 1rem;
 
-                    .main-header {
-                        font-size: 1.3rem;
-                        height: 10px;
-                        margin-block-end: 20px;
+                .main-header {
+                    font-size: 1.3rem;
+                    height: 10px;
+                    margin-block-end: 20px;
+                }
+
+                .info {
+                    .header {
+                        font-family: Airbnb_Cereal-Bold;
+                        font-size: 1rem;
+                        margin-block-start: 0;
                     }
 
-                    .info {
-                        .header {
-                            font-family: Airbnb_Cereal-Bold;
-                            font-size: 1rem;
-                            margin-block-start: 0;
-                        }
-
-                        .dates {
-                            margin-block-end: 1em;
-                        }
-                    }
-
-                    img {
-                        object-fit: cover;
-                        width: 100%;
+                    .dates {
+                        margin-block-end: 1em;
                     }
                 }
 
-                &.wishlist {
-                    grid-column: 5/7;
-                    grid-row: 1/3;
-
-                    .link {
-                        font-family: AirbnbCereal-Book;
-                        margin-block-start: 1em;
-                        margin-block-end: 0;
-                        display: flex;
-                        justify-content: center;
-                        margin-block-end: 1em;
-                        color: $clr1;
-                        background: radial-gradient(circle at left, #ff385c 0%, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
-                        font-size: 1rem;
-                        border: 1px solid $clr8;
-                        padding: 5px;
-                        border-radius: 10px;
-                        border-radius: 50px;
-                    }
+                img {
+                    object-fit: cover;
+                    width: 100%;
                 }
             }
 
-            .prev-stays {
-                grid-column: 1 / end;
-                grid-row: 3;
-                padding: 18px;
-                margin-block-start: 20px;
-                font-size: 1.25rem;
+            &.wishlist {
+                grid-column: 5/7;
+                grid-row: 1/3;
+
+                .link {
+                    font-family: AirbnbCereal-Book;
+                    margin-block-start: 1em;
+                    margin-block-end: 0;
+                    display: flex;
+                    justify-content: center;
+                    margin-block-end: 1em;
+                    color: $clr1;
+                    background: radial-gradient(circle at left, #ff385c 0%, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
+                    font-size: 1rem;
+                    border: 1px solid $clr8;
+                    padding: 5px;
+                    border-radius: 10px;
+                    border-radius: 50px;
+                }
+            }
+        }
+
+        .prev-stays {
+            grid-column: 1 / end;
+            grid-row: 3;
+            padding: 18px;
+            margin-block-start: 20px;
+            font-size: 1.25rem;
+
+
+            .main-container-stay-in-prev-stays {
+                display: block;
 
                 .stay-in-prev-stays {
-                    margin-inline-end: 5em;
+                    margin-block-start: 1em;
+                    font-size: 1rem;
 
                     img {
                         margin-inline-end: 1em;
@@ -85,10 +90,12 @@
 
                     .header {
                         font-family: Airbnb_Cereal-Bold;
-                        font-size: 1.15rem;
+                        font-size: 0.8rem;
                     }
                 }
             }
+
+        }
 
         @include for-tablet-layout {
             display: grid;
@@ -173,19 +180,24 @@
                 margin-block-start: 20px;
                 font-size: 1.25rem;
 
-                .stay-in-prev-stays {
-                    margin-inline-end: 5em;
+                .main-container-stay-in-prev-stays {
+                    display: flex;
 
-                    img {
-                        margin-inline-end: 1em;
-                        object-fit: cover;
-                        height: 72px;
-                        width: 72px;
-                    }
+                    .stay-in-prev-stays {
+                        margin-inline-end: 5em;
+                        margin-block-start: 0;
 
-                    .header {
-                        font-family: Airbnb_Cereal-Bold;
-                        font-size: 1.15rem;
+                        img {
+                            margin-inline-end: 1em;
+                            object-fit: cover;
+                            height: 72px;
+                            width: 72px;
+                        }
+
+                        .header {
+                            font-family: Airbnb_Cereal-Bold;
+                            font-size: 1.15rem;
+                        }
                     }
                 }
             }
